# Research_Project

./: README.md  makefile
inc/: play_game.h
inc/algorithms/: ab_rol_par.h  ab_rollouts.h  ab_simple.h  algorithm.h  algorithm_parallel.h  hash_table.h
inc/game/: game.h
inc/game/hex/: HexState.h
inc/statistics/: stats.h
lib/hashtable/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  months  months++  months.c  months.cc
lib/hashtable/util/: CMakeLists.txt  Makefile  cmake_install.cmake  hashtable.c  hashtable.h
src/algorithms/: ab_par.cc  ab_rol_par.cc  ab_rollouts.cc  ab_simple.cc  algorithm.cc  hash_table.cc
src/game/: hex_game.cc  hex_game_new_hash.cc  hex_game_old_hash.cc  simple_game.cc
src/game/hex/: HexState.cpp
src/game/jungle/: Makefile  contest.sh  evaluation.cc  location.cc  location.h  main.cc  move.cc  move.h  move_list.cc  move_list.h  movement.cc  movement.h  pieces.cc  pieces.h  position.cc  position.h  search.cc  search.h  terrain.cc  terrain.h  types.h  zobrist.h
src/main/: play_game.cc  run_ab_hex.cc  run_ab_par.cc  run_rol_hex.cc  run_rol_par.cc
src/statistics/: compare.cc  stats.cc
